# hsi-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/hsi_server/: __init__.py  gemini_client.py  main.py  scraper.py  scraper_index.py  scraper_quote.py
tests/: test_server.py
