[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsi-mcp-server"
version = "0.1.0"
description = "MCP server for Hang Seng Index data and news headlines"
authors = [
    {name = "Henry Cheng"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "google-cloud-aiplatform>=1.60.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/0nri/hsi-mcp-server"
Repository = "https://github.com/0nri/hsi-mcp-server"
Issues = "https://github.com/0nri/hsi-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hsi_server"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
